--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,9 @@
 {
+  "tabWidth": 2,
   "singleQuote": true,
-  "trailingComma": "all"
+  "trailingComma": "es5",
+  "endOfLine": "auto",
+  "bracketSpacing": true,
+  "printWidth": 100,
+  "semi": true
 }
