feat: update docker

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,16 @@
-### POSTGRES
+# Database
 POSTGRES_USER=postgres
-POSTGRES_PASSWORD=password
-POSTGRES_DB=auth-db
+POSTGRES_DB=homy_db
+POSTGRES_PASSWORD=your_secure_password
 
-### NestJS App
+# App Database Connection
 DB_HOST=postgres
 DB_PORT=5432
-DB_USERNAME=postgres
-DB_PASSWORD=password
-DB_DATABASE=auth-db
+DB_NAME=homy_db
+DB_USER=postgres
+DB_PASSWORD=your_secure_password
+
+# App
+PORT=3000
+NODE_ENV=development
+JWT_SECRET=your_super_secret_jwt_key_change_in_production
