--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,15 +1,53 @@
 services:
+  homy-api:
+    container_name: homy-api
+    image: homy-api
+    restart: unless-stopped
+    build:
+      context: .
+      dockerfile: Dockerfile
+      target: development
+    volumes:
+      - ./:/usr/src/app
+      - /usr/src/app/node_modules
+    ports:
+      - '3000:3000'
+    networks:
+      - homy-intranet
+    env_file: 
+      - .env
+    environment:
+      - DB_HOST=postgres
+    depends_on:
+      postgres:
+        condition: service_healthy
+    command: npm run start:dev
+
   postgres:
+    container_name: homy-postgres
     image: postgres:16-alpine
-    env_file: .env
-    ports: ['5432:5432']
+    restart: unless-stopped
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    ports:
+      - '5432:5432'
+    networks:
+      - homy-intranet
+    environment:
+      POSTGRES_DB: ${POSTGRES_DB:-homy_db}
+      POSTGRES_USER: ${POSTGRES_USER:-postgres}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-password}
     healthcheck:
-      test: ['CMD-SHELL', 'pg_isready -U $POSTGRES_USER -d $POSTGRES_DB']
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-postgres} -d ${POSTGRES_DB:-homy_db}"]
       interval: 5s
       timeout: 5s
       retries: 10
 
 volumes:
   postgres_data:
+    name: homy-postgres-data
+
+networks:
+  homy-intranet:
+    name: homy-intranet
+    driver: bridge
