--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ POSTGRES_DB=homy_db
 POSTGRES_PASSWORD=your_secure_password
 
 # App Database Connection
-DB_HOST=postgres
+DB_HOST=localhost
 DB_PORT=5432
 DB_NAME=homy_db
 DB_USER=postgres
