--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,28 +2,28 @@ services:
   postgres:
     container_name: homy-postgres
     image: postgres:16-alpine
-    restart: unless-stopped
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
     ports:
       - '5432:5432'
-    networks:
-      - homy-intranet
     environment:
-      POSTGRES_DB: ${POSTGRES_DB:-homy_db}
-      POSTGRES_USER: ${POSTGRES_USER:-postgres}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-password}
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-postgres} -d ${POSTGRES_DB:-homy_db}"]
-      interval: 5s
-      timeout: 5s
-      retries: 10
+      POSTGRES_DB: homy_db
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: your_secure_password
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+
+  minio:
+    image: minio/minio
+    command: server --console-address ":9001" /data
+    ports:
+      - "9000:9000"
+      - "9001:9001"
+    volumes:
+      - minio_storage:/data
+    environment:
+      MINIO_ROOT_USER: minio_admin
+      MINIO_ROOT_PASSWORD: minio_admin
 
 volumes:
   postgres_data:
-    name: homy-postgres-data
-
-networks:
-  homy-intranet:
-    name: homy-intranet
-    driver: bridge
+  minio_storage:
+  
