--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -23,7 +23,19 @@ services:
       MINIO_ROOT_USER: minio_admin
       MINIO_ROOT_PASSWORD: minio_admin
 
-volumes:
-  postgres_data:
-  minio_storage:
-  
+#   redis:
+#     image: redis:alpine3.16
+#     container_name: redis-wsbe
+#     env_file: .env
+#     command: >
+#       --requirepass ${REDIS_PASSWORD} --port ${REDIS_PORT}
+#     ports:
+#       - "6379:6379"
+#     restart: unless-stopped
+#     volumes:
+#       - redis_data:/data
+
+# volumes:
+#   postgres_data:
+#   minio_storage:
+#   redis_data:
