pizdec, budu eto chistiti

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,15 @@ DB_PASSWORD=your_secure_password
 PORT=3000
 NODE_ENV=development
 JWT_SECRET=your_super_secret_jwt_key_change_in_production
+
+## Email Configuration (SMTP)
+# Example: Mailtrap for testing
+# MAIL_HOST=smtp.mailtrap.io or IP address
+# MAIL_PORT=2525 or 587
+MAIL_HOST=smtp.example.com
+MAIL_PORT=587
+MAIL_USER=your-email@example.com
+MAIL_PASSWORD=your-smtp-password
+
+# Frontend URL
+FRONTEND_URL=http://localhost:3000
