--- a/.env.example
+++ b/.env.example
@@ -10,14 +10,11 @@ PORT=3000
 NODE_ENV=development
 JWT_SECRET=your_super_secret_jwt_key_change_in_production
 
-## Email Configuration (SMTP)
-# Example: Mailtrap for testing
-# MAIL_HOST=smtp.mailtrap.io or IP address
-# MAIL_PORT=2525 or 587
-MAIL_HOST=smtp.example.com
-MAIL_PORT=587
-MAIL_USER=your-email@example.com
-MAIL_PASSWORD=your-smtp-password
+## Email Configuration (Yandex - using IP to bypass DNS)
+MAIL_HOST=77.88.21.158
+MAIL_PORT=465
+MAIL_USER=your_email@yandex.ru
+MAIL_PASSWORD=your_email_password
 
 # Frontend URL
 FRONTEND_URL=http://localhost:3000
